Sudhakar - More UI changes
1. Added two column news items
2. Updated the "New" button to "Add News Item"
3. Styling changes

--- a/src/main/resources/ui/editor/css/SlidePreviewPanel.css
+++ b/src/main/resources/ui/editor/css/SlidePreviewPanel.css
@@ -3,7 +3,8 @@
 	height: 90px;
 	margin: 0 auto;
 	background: white;
-	margin-top: 20px;
+	margin: 15px;
+    display: inline-block;
 }
 
 .slidePreviewPanel .slideSnapshot .badge:before {
