--- a/src/main/resources/ui/editor/css/SlideEditor.css
+++ b/src/main/resources/ui/editor/css/SlideEditor.css
@@ -7,7 +7,7 @@
 }
 
 .slideEditor div.newSlide {
-	margin-left: 25px;
+	margin-left: 82px;
 }
 
 .slideEditor .btn-warning {
@@ -25,7 +25,7 @@
 }
 
 .slideEditor .slidePreviewPanel {
-	width: 150px;
+	width: 320px;
 	height: 100%;
 	float: left;
 	border-right: 1px solid #333;
@@ -36,7 +36,7 @@
 .slideEditor .operatingTable {
 	height: 100%;
 	width: 100%;
-	margin-left: 151px;
+	margin-left: 335px;
 	position: absolute;
 	overflow: hidden;
 }
@@ -77,6 +77,7 @@
 	-webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    float: left;
 }
 
 .lato { font-family:'Lato', sans-serif; }
